<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/textView_Account_Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:text="@string/txt_account_info"
        android:textColor="@color/colorPrimaryDark"

        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_Account_Info"
        app:layout_constraintTop_toBottomOf="@+id/textView_Account_Info">

        <TextView
            android:id="@+id/textView_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView_Account_Info"
            app:layout_constraintTop_toBottomOf="@+id/textView_Account_Info" />

        <TextView
            android:id="@+id/textView_Name_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text=""
            android:textColor="@color/colorTextLightGrey"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView_Name"
            app:layout_constraintTop_toBottomOf="@+id/textView_Name" />

        <TextView
            android:id="@+id/textView_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_email"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView_Name"
            tools:layout_editor_absoluteY="292dp" />

        <TextView
            android:id="@+id/textView_Email_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text=""
            android:textColor="@color/colorTextLightGrey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_Date_Registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_date_registered"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView_Name"
            tools:layout_editor_absoluteY="292dp" />

        <TextView
            android:id="@+id/textView_Date_Registered_Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text=""
            android:textColor="@color/colorTextLightGrey"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@android:color/transparent"
        android:gravity="start|center_vertical"
        android:text="@string/button_logout"
        android:textAllCaps="true"
        android:textColor="@color/colorRedDark"
        android:textSize="20sp"
        app:icon="@drawable/ic_exit"
        app:iconPadding="15dp"
        app:iconSize="24dp"
        app:iconTint="@color/colorRedDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.903" />

</androidx.constraintlayout.widget.ConstraintLayout>